# django-admin-interface

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini  update-translations.sh  vendor.yml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: codeql-analysis.yml  create-release.yml  label-sponsors.yml  openssf-scorecard.yml  pre-commit-autoupdate.yml  pythonpackage.yml  test-package.yml
admin_interface/: __init__.py  admin.py  apps.py  cache.py  compat.py  metadata.py  models.py  settings.py  version.py
admin_interface/fixtures/: admin_interface_theme_bootstrap.json  admin_interface_theme_django.json  admin_interface_theme_foundation.json  admin_interface_theme_uswds.json  admin_theme_default.json  initial_data.json
admin_interface/locale/ar/LC_MESSAGES/: django.mo  django.po
admin_interface/locale/de/LC_MESSAGES/: django.mo  django.po
admin_interface/locale/es/LC_MESSAGES/: django.mo  django.po
admin_interface/locale/fa/LC_MESSAGES/: django.mo  django.po
admin_interface/locale/fr/LC_MESSAGES/: django.mo  django.po
admin_interface/locale/it/LC_MESSAGES/: django.mo  django.po
admin_interface/locale/pl/LC_MESSAGES/: django.mo  django.po
admin_interface/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
admin_interface/locale/ru/LC_MESSAGES/: django.mo  django.po
admin_interface/locale/tr/LC_MESSAGES/: django.mo  django.po
admin_interface/migrations/: 0001_initial.py  0002_add_related_modal.py  0003_add_logo_color.py  0004_rename_title_color.py  0005_add_recent_actions_visible.py  0006_bytes_to_str.py  0007_add_favicon.py  0008_change_related_modal_background_opacity_type.py  0009_add_enviroment.py  0010_add_localization.py  0011_add_environment_options.py  0012_update_verbose_names.py  0013_add_related_modal_close_button.py  0014_name_unique.py  0015_add_language_chooser_active.py  0016_add_language_chooser_display.py  0017_change_list_filter_dropdown.py  0018_theme_list_filter_sticky.py  0019_add_form_sticky.py  0019_theme_action_buttons_sticky.py  0020_module_selected_colors.py  0021_file_extension_validator.py  0022_add_logo_max_width_and_height.py  0023_theme_foldable_apps.py  0024_remove_theme_css.py  0025_theme_language_chooser_control.py  0026_theme_list_filter_highlight.py  0027_theme_list_filter_quick_remove.py  0027_theme_list_filter_removal_links.py  0028_theme_show_fieldsets_as_tabs_and_more.py  0029_auto_20221202_0849.py  0029_theme_active_dark.py  0029_theme_css_generic_link_active_color.py  0030_rename_css_delete_button_background_color_theme_css_delete_button_bg_color_and_more.py  0030_theme_collapsible_stacked_inlines_and_more.py  0031_theme_css_body_background_color_and_more.py  0031_theme_form_actions_sticky.py  0031_theme_static_logo_path.py  0032_alter_theme_css_body_foreground_color_and_more.py  0032_alter_theme_defaults.py
admin_interface/south_migrations/: 0001_initial.py
admin_interface/static/admin/js/: cancel.js  collapse.js  popup_response.js
admin_interface/static/admin_interface/collapsible-inlines/: collapsible-inlines.js
admin_interface/static/admin_interface/css/: admin-interface-fix.css  admin-interface.css  change-form.css  changelist.css  ckeditor.css  fieldsets.css  file-upload.css  form-controls.css  header.css  inlines.css  jquery.ui.tabs.css  json-widget.css  language-chooser.css  list-filter-dropdown.css  list-filter.css  login.css  modules.css  nav-sidebar.css  object-tools.css  paginator.css  rangefilter.css  recent-actions.css  (+5 more)
admin_interface/static/streamfield/: admin_popup_response.js
admin_interface/templates/admin/: base_site.html  change_form.html  change_list.html  filter.html  popup_response.html
admin_interface/templates/admin_interface/: collapsible-inlines.html  date_hierarchy_removal_link.html  dropdown_filter.html  favicon.html  foldable-apps.html  language_chooser.html  list_filter_removal_link.html  related-modal.html
admin_interface/templatetags/: admin_interface_tags.py
tests/: routers.py  settings.py  test_fixtures.py  test_metadata.py  test_migrations.py  test_models.py  test_multidb.py  test_resolve_variable.py  test_settings.py  test_templatetags.py  tests.py  urls.py  urls_without_i18n_patterns.py
(+43 files in other folders)
