[metadata]
name = django-admin-interface
version = 0.24.2
author = Fabio Caccamo
author_email = fabio.caccamo@gmail.com
description = django-admin-interface is a modern responsive flat admin interface customizable by the admin itself.
keywords =
    django
    admin
    interface
    responsive
    flat
    theme
    custom
    ui
url = https://github.com/fabiocaccamo/django-admin-interface
download_url = https://github.com/fabiocaccamo/django-admin-interface/archive/0.24.2.tar.gz
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Build Tools
requires = django (>= 2.2)
project_urls =
    Documentation = https://github.com/fabiocaccamo/django-admin-interface#readme
    Issues = https://github.com/fabiocaccamo/django-admin-interface/issues
    Funding = https://github.com/sponsors/fabiocaccamo/
    Twitter = https://twitter.com/fabiocaccamo

[options]
packages = find:
install_requires = django-colorfield >= 0.8.0, < 1.0.0
include_package_data = True

[options.packages.find]
exclude = contrib; docs; tests*
